--- a/maze/maze.html
+++ b/maze/maze.html
@@ -5,6 +5,8 @@
     <link rel="stylesheet" type="text/css" href="maze.css">
 </head>
 <body> 
+
+    <script src="connection.js"></script>
     <script src="maze.js"></script>
     <script src="rendering.js"></script>
 
