--- a/maze/maze.html
+++ b/maze/maze.html
@@ -6,9 +6,12 @@
 </head>
 <body> 
 
-    <script src="connection.js"></script>
-    <script src="maze.js"></script>
+    <script type = "module" src = "all.js"></script>
+
+    <!-- <script src="connection.js"></script> -->
+    <!-- <script src="maze.js"></script>
     <script src="rendering.js"></script>
+    <script src="personage.js"></script> -->
 
 
 
