--- a/maze/maze.html
+++ b/maze/maze.html
@@ -4,7 +4,9 @@
     <title>Document</title>
     <link rel="stylesheet" type="text/css" href="maze.css">
 </head>
-<body> 
+<body>
+    <!-- <div class = "all"></div> -->
+
 
     <script type = "module" src = "all.js"></script>
 
